--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blk-design-system-react",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "React version of BLK Design System by Creative Tim",
   "main": "index.js",
   "author": "Creative Tim",
@@ -36,17 +36,16 @@
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.4.1",
     "bootstrap": "4.5.3",
-    "chart.js": "2.9.4",
     "classnames": "2.3.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "moment": "2.29.4",
     "nouislider": "14.6.3",
     "perfect-scrollbar": "1.5.5",
-    "react": "18.2.0",
-    "react-chartjs-2": "2.11.1",
-    "react-datetime": "3.1.1",
-    "react-dom": "18.2.0",
+    "react": ">=16.8.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datetime": "^3.2.0",
+    "react-dom": ">=16.8.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "8.7.1",
@@ -63,7 +62,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "build": "react-scripts builds",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
