--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,5 +25,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: cd frontend && npm i
-    - run: cd frontend && npm run build --if-present
-    - run: cd frontend && npm test
+    - run: cd frontend && npm start
+    # - run: cd frontend && npm test
