--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -15,7 +12,6 @@ jobs:
     strategy:
       matrix:
         node-version: [19.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -25,5 +21,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: cd frontend && npm i
-    - run: cd frontend && (npm start&)
-    # - run: cd frontend && npm test
+    - run: pm2 delete 0
+    - run: cd frontend && (pm2 start npm --name "react-app" -- start --no-deamon&)
