--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Team Metatron Web",
   "main": "index.js",
   "no-error-on-warning": true,
-  "homepage": "https://github.com/Team-Metatron/mtron.me",
+  "homepage": "https://team-metatron.github.io/mtron.me/",
   "keywords": [
     "metatron"
   ],
